refactor: 캠페인 상세 submissions 조회 N+1 제거
CompanyService.getCampaign 과 AdminService.getCampaign 이 지원자마다
submissionRepository.findByApplicationIdOrderBySubmittedAtAsc 를 호출해
지원자 수만큼 쿼리가 발생했다(N+1).

ApplicationSubmissionRepository 에 벌크 조회 메서드를 추가하고 단일 호출 후
applicationId 로 groupingBy 해 분배하도록 변경. 빈 appIds 일 때는 쿼리 자체를 스킵.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>